Fix version z-index and button color

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -14,6 +14,10 @@
     z-index: 10;
 }
 
+.md-version {
+    z-index: 10;
+}
+
 /* Splash container and background */
 .splash-container {
     position: relative;
@@ -83,7 +87,7 @@
     font-weight: 700;
     margin-bottom: 1rem;
     line-height: 1.15;
-    color: #ffffff;
+    color: #ffffff88;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -99,6 +103,7 @@
 }
 
 .mdx-hero .md-button {
+    background-color: #ffffff;
     margin: 0.5rem;
     font-size: 1rem;
     padding: 0.625em 2em;
